--- a/frontend/express/index.html
+++ b/frontend/express/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <body class="h-screen flex flex-col items-center justify-start pt-10">
-    <h1 class="py-2 text-2xl">AKS and Azure Service Bus architecture test</h1>
-    <h2 class="py-2 text-xl">
+  <body class="h-screen px-2 flex flex-col items-center justify-start pt-10">
+    <h1 class="py-2 text-2xl text-center">
+      Azure Service Bus architecture test
+    </h1>
+    <h2 class="py-2 text-center text-xl">
       Press the button to send one job to one of the workers
     </h2>
     <button
@@ -91,7 +93,7 @@
     }
 
     async function updateProgress() {
-      const response = await fetch(`http://localhost:8000/api/jobs/${jobId}`);
+      const response = await fetch(`/api/jobs/${jobId}`);
       if (response?.ok) {
         const myJson = await response.json();
         if (myJson.completed) {
@@ -120,7 +122,7 @@
     const sendJob = async () => {
       jobInfo.innerHTML = "Requesting job...";
       changeView("status");
-      const response = await fetch("http://localhost:8000/api/jobs/request", {
+      const response = await fetch("/api/jobs/request", {
         method: "POST",
       });
 
